--- a/Lounge/MainWindow.xaml
+++ b/Lounge/MainWindow.xaml
@@ -16,7 +16,7 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="200" />
+            <ColumnDefinition Width="300" />
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -44,20 +44,21 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Grid Name="settings" Grid.Row="1" Grid.Column="1" >
+        <Grid Name="settings" Grid.Row="1" Grid.Column="1" Margin="10">
             <Grid.RowDefinitions>
+                <RowDefinition Height="30" />
+                <RowDefinition Height="20" />
+                <RowDefinition Height="20" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="30" />
             </Grid.RowDefinitions>
             <ComboBox x:Name="audioDevices" Grid.Row="0" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" />
             <CheckBox x:Name="primaryMonitor" Grid.Row="1" Content="Primary Monitor" IsChecked="True" />
             <CheckBox x:Name="LEDs" Content="Ardunio LEDs" Grid.Row="2" Grid.Column="1" IsChecked="True" />
             <ListBox x:Name="LEDPatterns" HorizontalAlignment="Left" Height="67" Grid.Row="3" VerticalAlignment="Top" />
             <ListBox x:Name="visualixations" HorizontalAlignment="Left" Height="67" Grid.Row="4" VerticalAlignment="Top" />
-
+            <Button x:Name="play" Content="Play" Grid.Row="5" Height="30" Click="play_Click" />
         </Grid>
         
     </Grid>
