--- a/Lounge/App.xaml
+++ b/Lounge/App.xaml
@@ -1,9 +1,18 @@
-﻿<Application x:Class="Lounge.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Lounge"
-             StartupUri="MainWindow.xaml">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Application x:Class="Lounge.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:Lounge" StartupUri="MainWindow.xaml">
     <Application.Resources>
          
-    </Application.Resources>
+    <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes\ExpressionDark.xaml" />
+                <!--
+                <ResourceDictionary Source="Themes\BureauBlack.xaml" />
+                <ResourceDictionary Source="Themes\BureauBlue.xaml" />
+                <ResourceDictionary Source="Themes\ExpressionDark.xaml" />
+                <ResourceDictionary Source="Themes\ExpressionLight.xaml" />
+                <ResourceDictionary Source="Themes\ShinyBlue.xaml" />
+                <ResourceDictionary Source="Themes\ShinyRed.xaml" />
+                <ResourceDictionary Source="Themes\WhistlerBlue.xaml" />
+                --></ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary></Application.Resources>
 </Application>
