--- a/Lounge/LoungeMediaFrame.xaml
+++ b/Lounge/LoungeMediaFrame.xaml
@@ -8,7 +8,8 @@
         Title="LoungeMediaFrame" 
         ResizeMode="NoResize" 
         WindowStyle="None"
-        ShowInTaskbar="False">
+        ShowInTaskbar="False" KeyUp="Window_KeyUp"
+        >
     <Grid Background="Black">
         <Canvas Name="Medias" />
 
